# Heter_BLAS_explore

./: Bandwidth_gold1_100000.0_bytes.eps  Bandwidth_gold1_1000000.0_bytes.eps  CMakeLists.txt  CMakeLists_dun.txt  CMakeLists_dun_intel.txt  CMakeLists_gold1_gnu.txt  CMakeLists_gold1_intel.txt  README.md  Time_dungani_100000.0_bytes.eps  Time_dungani_1000000.0_bytes.eps  Time_gold1_10000.0_bytes.eps  Time_gold1_100000.0_bytes.eps  Transpose_dungani_1d1000000.0.eps  Transpose_dungani_1d10000000.0.eps  Transpose_gold1__1d1000.0.eps  Transpose_gold1__1d10000.0.eps  Transpose_gold1__3d1000.0.eps  Transpose_gold1__3d10000.0.eps  bandwidth_benchmark_runner.py  bandwidth_functions.py  benchmark_runner.py  buffer_datatype.py  code_format.py  cost_function (another copy).py  cost_function.py  daxpy_benchmark_runner.py  daxpy_dungani_100000.0.eps  daxpy_dungani_1000000.0.eps  daxpy_dungani_10000000.0.eps  daxpy_gold1_100000.0.eps  daxpy_gold1_1000000.0.eps  daxpy_gold1_10000000.0.eps  dgemm_benchmark_runner.py  dgemm_functions.py  efficiency_predictor.py  general_functions.py  plot_functions.py  run_benchmark.sh  temp.out  test_possible_functions.py  (+2 more)
Results/: CPU_only_error.md  CPU_only_error_.md  CPU_only_error_gold1.md  CPU_only_log.md  CPU_only_log_.md  CPU_only_log_gold1.md  GPU_only_error.md  GPU_only_error_.md  GPU_only_error_gold1.md  GPU_only_log.md  GPU_only_log_.md  GPU_only_log_gold1.md  bandwidth_error_gold1.md  bandwidth_log_gold1.md  daxpy_error.md  daxpy_error_gold1.md  daxpy_log.md  daxpy_log_.md  daxpy_log_gold1.md  transpose_error_gold1.md  transpose_log_gold1.md
Results_dungani/: Bandwidth_dungani_10000.0_bytes.eps  Bandwidth_dungani_100000.0_bytes.eps  Bandwidth_dungani_1000000.0_bytes.eps  CPU_only_err_dungani.md  CPU_only_error_dungani.md  CPU_only_log_dungani.md  CPU_only_log_dungani.md_sorted  Dev_to_Host_Bw_dungani_10000.0_bytes.eps  Dev_to_Host_Bw_dungani_100000.0_bytes.eps  Dev_to_Host_Bw_dungani_1000000.0_bytes.eps  Dev_to_Host_Error_dungani_10000.0_bytes.eps  Dev_to_Host_Error_dungani_100000.0_bytes.eps  Dev_to_Host_Error_dungani_1000000.0_bytes.eps  Dgemm CPU_dungani_1000000.0.eps  Dgemm CPU_dungani_10000000.0.eps  Dgemm CPU_dungani_100000000.0.eps  Dgemm CPU_dungani_1000000000.0.eps  Dgemm GPU_dungani_10000000.0.eps  Dgemm GPU_dungani_100000000.0.eps  Dgemm GPU_dungani_1000000000.0.eps  Error_Dgemm CPU_dungani_1000000.0.eps  Error_Dgemm CPU_dungani_10000000.0.eps  Error_Dgemm CPU_dungani_100000000.0.eps  Error_Dgemm CPU_dungani_1000000000.0.eps  Error_Dgemm GPU_dungani_10000000.0.eps  Error_Dgemm GPU_dungani_100000000.0.eps  Error_Dgemm GPU_dungani_1000000000.0.eps  Error_Transpose_dungani_1d100000.0.eps  Error_Transpose_dungani_1d1000000.0.eps  Error_Transpose_dungani_1d10000000.0.eps  Error_Transpose_dungani_1d100000000.0.eps  Error_dungani_10000.0_bytes_device_to_host.eps  Error_dungani_10000.0_bytes_host_to_device.eps  Error_dungani_100000.0_bytes_device_to_host.eps  Error_dungani_100000.0_bytes_host_to_device.eps  Error_dungani_1000000.0_bytes_device_to_host.eps  Error_dungani_1000000.0_bytes_host_to_device.eps  GPU_only_err_dungani.md  GPU_only_error_dungani.md  GPU_only_log_dungani.md  (+31 more)
Results_gold1/: CPU_only_err_gold1.md  CPU_only_log_gold1 (copy).md  CPU_only_log_gold1.md  CPU_only_log_gold1.md_sorted  GPU_only_err_gold1.md  GPU_only_log_gold1.md  GPU_only_log_gold1.md_sorted  bandwidth_err_gold1.md  bandwidth_log_gold1.md  bandwidth_log_gold1.md_sorted  daxpy_err_gold1.md  daxpy_log_gold1.md  daxpy_log_gold1.md_sorted  transpose_err_gold1.md  transpose_log_gold1.md  transpose_log_gold1.md_sorted
backup_basically_trash/: Bandwidth_gold1_10000.0_bytes.eps  Bandwidth_gold1_1000000.0_bytes.eps  Time_dungani_10000.0_bytes.eps  Time_gold1_1000000.0_bytes.eps  Transpose_dungani_1d100000.0.eps  Transpose_gold1__1d1000.0.eps  Transpose_gold1__1d10000.0.eps  Transpose_gold1__3d1000.0.eps  cost_function (copy).py  cost_function (copy)1.py  daxpy_gold1_100000.0.eps  daxpy_gold1_10000000.0.eps  efficiency_predictor.py
inc/: Zawardo_defines.hpp  benchmark_functions.hpp  cpu_utils.hpp  gpu_utils.hpp
lib/: benchmark_functions.cu  cpu_utils.cpp  gpu_utils.cu
src/: BLASter_test_correctness.cu  Zawardo_tests.cu  Zawardo_tests_double.cu.backup  bandwidth_benchmark.cu  cpu_utils.cpp  daxpy_benchmark.cpp  dgemm_runner.cu  gpu_utils.cu  transpose_benchmark.cpp
